# RSI

./: README.md  pyproject.toml
src/rsi/: __init__.py  colour.py  config.py  light_changer.py  logger.py  logger_config.toml  main.py  types.py  utils.py  windows.py
src/rsi/utils_/: ConfigurationManager.py  __init__.py
